The People Versus branch

--- a/ShowControlWeb QuestionManagement/Views/GameQuestions/Delete.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/GameQuestions/Delete.cshtml
@@ -30,34 +30,10 @@
             @Html.DisplayFor(model => model.Question)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer1)
+            @Html.DisplayNameFor(model => model.Answer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer1)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer2)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer2)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer3)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer3)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Answer4)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Answer4)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CorrectAnswer)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CorrectAnswer)
+            @Html.DisplayFor(model => model.Answer)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CategoryId)
