--- a/ShowControlWeb QuestionManagement/Views/GameQuestions/Edit.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/GameQuestions/Edit.cshtml
@@ -29,29 +29,9 @@
                 <span asp-validation-for="Question" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Answer1" class="control-label"></label>
-                <input asp-for="Answer1" class="form-control" />
-                <span asp-validation-for="Answer1" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Answer2" class="control-label"></label>
-                <input asp-for="Answer2" class="form-control" />
-                <span asp-validation-for="Answer2" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Answer3" class="control-label"></label>
-                <input asp-for="Answer3" class="form-control" />
-                <span asp-validation-for="Answer3" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Answer4" class="control-label"></label>
-                <input asp-for="Answer4" class="form-control" />
-                <span asp-validation-for="Answer4" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CorrectAnswer" class="control-label"></label>
-                <input asp-for="CorrectAnswer" class="form-control" />
-                <span asp-validation-for="CorrectAnswer" class="text-danger"></span>
+                <label asp-for="Answer" class="control-label"></label>
+                <input asp-for="Answer" class="form-control" />
+                <span asp-validation-for="Answer" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
@@ -87,6 +67,16 @@
                 <label asp-for="QuestionCreator" class="control-label"></label>
                 <input asp-for="QuestionCreator" class="form-control" />
                 <span asp-validation-for="QuestionCreator" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="QuestionCreatorCity" class="control-label"></label>
+                <input asp-for="QuestionCreatorCity" class="form-control" />
+                <span asp-validation-for="QuestionCreatorCity" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="QuestionCreatorPhone" class="control-label"></label>
+                <input asp-for="QuestionCreatorPhone" class="form-control" />
+                <span asp-validation-for="QuestionCreatorPhone" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DateOfCreation" class="control-label"></label>
