--- a/ShowControlWeb QuestionManagement/Views/GameQuestions/Index.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/GameQuestions/Index.cshtml
@@ -17,11 +17,7 @@
         columns.Add(model => model.QuestionId).Titled("ID");
         columns.Add(model => model.Difficulty).Titled("Difficulty");
         columns.Add(model => model.Question).Titled("Question");
-        columns.Add(model => model.Answer1).Titled("Answer1");
-        columns.Add(model => model.Answer2).Titled("Answer2");
-        columns.Add(model => model.Answer3).Titled("Answer3");
-        columns.Add(model => model.Answer4).Titled("Answer4");
-        columns.Add(model => model.CorrectAnswer).Titled("Correct");
+        columns.Add(model => model.Answer).Titled("Answer");
         columns.Add(model => model.Type).Titled("Type");
         //DateOfCreation
     }).Empty("No data found")
