--- a/ShowControlWeb QuestionManagement/Views/GameQuestions/Create.cshtml
+++ b/ShowControlWeb QuestionManagement/Views/GameQuestions/Create.cshtml
@@ -18,30 +18,10 @@
                 <span asp-validation-for="Question" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Answer1" class="control-label"></label>
-                <input asp-for="Answer1" class="form-control" />
-                <span asp-validation-for="Answer1" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Answer2" class="control-label"></label>
-                <input asp-for="Answer2" class="form-control" />
-                <span asp-validation-for="Answer2" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Answer3" class="control-label"></label>
-                <input asp-for="Answer3" class="form-control" />
-                <span asp-validation-for="Answer3" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Answer4" class="control-label"></label>
-                <input asp-for="Answer4" class="form-control" />
-                <span asp-validation-for="Answer4" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CorrectAnswer" class="control-label"></label>
-                <input asp-for="CorrectAnswer" class="form-control" />
-                <span asp-validation-for="CorrectAnswer" class="text-danger"></span>
-            </div>
+                <label asp-for="Answer" class="control-label"></label>
+                <input asp-for="Answer" class="form-control" />
+                <span asp-validation-for="Answer" class="text-danger"></span>
+            </div>         
             <div class="form-group">
                 <label asp-for="MoreInformation" class="control-label"></label>
                 <input asp-for="MoreInformation" class="form-control" />
